--- a/app/views/otakus/show.html.erb
+++ b/app/views/otakus/show.html.erb
@@ -8,7 +8,7 @@
 <ul>
   <% @otaku.otaku_figs.each do |fig| %>
   <!--<li><#%= fig.character %> (<#%= fig.series %>)</li>-->
-  <li><%= fig.id%></li>
+  <%= fig %>
   <% end %>
 </ul>
 <h3><%= link_to "Add a fig",  new_otaku_otaku_fig_path(@otaku) %></h3>
